--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
 
 <a name="Go_to_the_calculator"></a><h2><a id="Choosetherightcalculator1" class="anchor"></a>Go to the calculator</h2>
 <p>Choose the right calculator depending on your situation.</p>
-<a name="Tax_withheld_for_individuals_calculator"></a><h3 class="notoc">Tax withheld for individuals calculator</h3>
+<a name="Tax_withheld_for_individuals_calculator"></a><h3 class="notoc">Download tax withheld for individuals calculator</h3>
 <p>The Tax withheld for individuals calculator is for payments made to employees and other workers including working holiday makers. It will take between 2&#160;and&#160;10 minutes to use.</p>
-<a class="button primary" href="/Calculators-and-tools/Host/?anchor=TWC#TWC/questions" title="Tax withheld for individuals calculator">Tax withheld for individuals calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
+<a class="button primary" href="/Calculators-and-tools/Host/?anchor=TWC#TWC/questions" title="Download tax withheld Calculator for individuals calculator">Download tax withheld for individuals calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
 <p>The <a href="/General/Online-services/Online-services-for-individuals-and-sole-traders/ATO-app/">ATO app</a> includes a simplified version of the tax withheld calculator for use by employers and workers. It will take between 1&#160;and 2&#160;minutes to use.</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 <a name="What_you_can_do_with_this_calculator"></a><h2><a id="Whatyoucandowiththesecalculators" class="anchor"></a>What you can do with this calculator</h2>
