--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; 
             <div class="main-bar-stripe layout-stripe">
                 <div>
                     <div>
-                        <div class="main-bar-stripe layout-stripe"><div class="main-bar layout-content-box"><div class="logo"><h1><a href="/" title="Back to Australian Taxation Office homepage"><img border="0" src="/uploadedImages/Content/_DEM/Images/logo-ato.png" alt="Australian Taxation Office" id="ATOLogo" title="Australian Taxation Office logo" /></a></h1>
+                        <div class="main-bar-stripe layout-stripe"><div class="main-bar layout-content-box"><div class="logo"><h1><a href="/" title="Back to Australian Taxation Office homepage"><img border="0" src="https://www.ato.gov.au/uploadedImages/Content/_DEM/Images/logo-ato.png" alt="Australian Taxation Office" id="ATOLogo" title="Australian Taxation Office logo" /></a></h1>
 
 
 
@@ -249,11 +249,9 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
                         <div id="content-main-wrap" class="content-main-wrap ato-content">
                             <ul style="margin: 0; padding: 0">
                                 <li class="PBItem" style="list-style-type: none">
-                                    <Div class="widgetBody"><span class="accesspoint"></span><h1>Tax withheld calculator</h1>
+                                    <Div class="widgetBody"><span class="accesspoint"></span><h1>Download TAX withheld calculator</h1>
 
-<p><b>On this page</b></p>
-
-<a name="Tax_withheld_for_individuals_calculator"></a><h3 class="notoc">Download tax withheld for individuals calculator</h3>
+<a name="Tax_withheld_for_individuals_calculator"></a><h3 class="notoc">Click button below to download tax withheld for individuals calculator </h3>
 <p>The Tax withheld for individuals calculator is for payments made to employees and other workers including working holiday makers. It will take between 2&#160;and&#160;10 minutes to use.</p>
 <a class="button primary" href="/Calculators-and-tools/Host/?anchor=TWC#TWC/questions" title="Download tax withheld Calculator for individuals calculator">Download tax withheld for individuals calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
 <p>The <a href="/General/Online-services/Online-services-for-individuals-and-sole-traders/ATO-app/">ATO app</a> includes a simplified version of the tax withheld calculator for use by employers and workers. It will take between 1&#160;and 2&#160;minutes to use.</p>
