--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
                         <div id="content-main-wrap" class="content-main-wrap ato-content">
                             <ul style="margin: 0; padding: 0">
                                 <li class="PBItem" style="list-style-type: none">
-                                    <Div class="widgetBody"><span class="accesspoint"></span><h1>Download TAX withheld calculator</h1>
+                                    <Div class="widgetBody"><span class="accesspoint"></span><h1>Download tax withheld calculator</h1>
 
-<a name="Tax_withheld_for_individuals_calculator"></a><h3 class="notoc">Click button below to download tax withheld for individuals calculator </h3>
+<a name="Tax_withheld_for_individuals_calculator"></a>
 
-<a class="button primary" href="/Calculators-and-tools/Host/?anchor=TWC#TWC/questions" title="Download tax withheld Calculator for individuals calculator">Download tax withheld for individuals calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
+<a class="button primary" href="/Calculators-and-tools/Host/?anchor=TWC#TWC/questions" title="Download tax withheld Calculator here">Download tax withheld for calculator here</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
 <p>The <a href="/General/Online-services/Online-services-for-individuals-and-sole-traders/ATO-app/">ATO app</a> includes a simplified version of the tax withheld calculator for use by employers and workers. It will take between 1&#160;and 2&#160;minutes to use.</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 <a name="What_you_can_do_with_this_calculator"></a><h2><a id="Whatyoucandowiththesecalculators" class="anchor"></a>What you can do with this calculator</h2>
