--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@ j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; 
             <script type="text/html" id="template-login">
 <div id="template-login"><div class="login"><label><h3>Login as</h3>
 <div class="sel-style"><select>
-<option selected="selected" value="https://onlineservices.ato.gov.au/default.aspx?PageName=HomePage">Individual</option>
-<option value="https://onlineservices.ato.gov.au/default.aspx?PageName=HomePage">Sole Trader</option>
-<option value="https://onlineservices.ato.gov.au/business/Businesslogin.html">Business</option>
-<option value="https://onlineservices.ato.gov.au/onlineservices/login.html">BAS Agent</option>
-<option value="https://onlineservices.ato.gov.au/onlineservices/login.html">Tax Agent</option>
-<option value="https://am.ato.gov.au/amsupport/pages/welcome.htm">Access Manager</option>
-<option value="https://onlineservices.ato.gov.au/non-resident/">Non-resident</option>
-<option value="https://onlineservices.ato.gov.au/foreigninvestor/">Foreign Investor</option>
+<option selected="selected" value="/">Individual</option>
+<option value="/">Sole Trader</option>
+<option value="/">Business</option>
+<option value="/">BAS Agent</option>
+<option value="/">Tax Agent</option>
+<option value="/">Access Manager</option>
+<option value="/">Non-resident</option>
+<option value="/">Foreign Investor</option>
 </select>
  </div>
-</label><button type="button" class="login-button">Login</button><a href="/register" class="register">Register
-<span aria-hidden="true" class="triangle">▶</span></a><span class="service-links"><a href="/atoo_systemmaintenance" class="system-maintenance">System maintenance and issues</a><span class="separator"></span><a href="/accessmanager" class="access-manager">Access manager</a></span>
+</label><button type="button" class="login-button">Login</button><a href="/" class="register">Register
+<span aria-hidden="true" class="triangle">▶</span></a><span class="service-links"><a href="/" class="system-maintenance">System maintenance and issues</a><span class="separator"></span><a href="/accessmanager" class="access-manager">Access manager</a></span>
  </div>
 </div>
 </script>
