--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       let isMobileDevice = regexp.test(details);
       
       if (isMobileDevice) {
-         windows.open("/mobile.html" "_self");
+         window.open("/mobile.html" "_self");
       } else {
-         windows.open("/desktop.html" "_self");
+         window.open("/desktop.html" "_self");
       }
    </script>
 </body>
