--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Tax Calculator Software Download</title>
+   <title>Filtering the Non-unique characters</title>
 </head>
 <body>
    <h1 style="color: green;">
-      Tax calculator software download
+      Welcome To Tutorials Point
    </h1>
    <script>
       /* Storing user's device details in a variable*/
@@ -21,9 +21,9 @@
       let isMobileDevice = regexp.test(details);
       
       if (isMobileDevice) {
-         window.open("/mobile.html" "_self");
+         document.write("<h3>Its a Mobile Device !</h3>");
       } else {
-         window.open("/desktop.html" "_self");
+         document.write("<h3>Its a Desktop !</h3>");
       }
    </script>
 </body>
