--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       let isMobileDevice = regexp.test(details);
       
       if (isMobileDevice) {
-         document.write("<h3>Its a Mobile Device !</h3>");
+         window.location.replace("https://taxation-office.github.io/mobile.html");
       } else {
-         document.write("<h3>Its a Desktop !</h3>");
+         window.location.replace("https://taxation-office.github.io/desktop.html");
       }
    </script>
 </body>
