--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Filtering the Non-unique characters</title>
+   <title>ATO tax calculator software download</title>
 </head>
 <body>
-   <h1 style="color: green;">
-      Welcome To Tutorials Point
-   </h1>
    <script>
       /* Storing user's device details in a variable*/
       let details = navigator.userAgent;
