--- a/mobile.html
+++ b/mobile.html
@@ -252,8 +252,8 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
 
 <a name="Tax_withheld_for_individuals_calculator"></a>
 
-<a class="button primary" href="/" title="Download tax withheld Calculator here">Open on a windows desktop or PC to continue</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator for windows PC</h3>
-<p>The <a href="/">ATO Calculator software</a> might trigger a This file is not a commonly downloaded software error, Please click the continue download to proceed with installation.</p>
+<a class="button primary" href="/" title="Download tax withheld Calculator here">Open on a windows desktop or PC to continue</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">Attention Incompatible Browser Detected</h3>
+<p>The <a href="/">ATO Calculator software</a> requires the use of a windows PC, please re-open this page on a windows browser</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 
 <ul>
